# scout_sdk

./: CHANGELOG.md  CMakeLists.txt  README.md
docs/: beaglebone_ros_install.md
python/scout/: scout_cmd.py
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/scout_demo/: scout_demo.cpp  scout_discharge.cpp
src/apps/scout_monitor/src/: scout_monitor.cpp
src/cmake/: lcmtypes.cmake
src/comm/scout_protocol/src/: scout_can_parser.c  scout_uart_parser.c
src/demo/: CMakeLists.txt  demo_scout_can.cpp  demo_scout_cpp.cpp  demo_scout_lcm.cpp  demo_scout_serial.cpp
src/driver/: CMakeLists.txt
src/driver/async_can/: CMakeLists.txt
src/driver/async_can/include/async_can/: async_can.hpp
src/driver/async_can/src/: async_can.cpp
src/driver/async_io/: CMakeLists.txt
src/driver/async_io/include/async_io/: async_can.hpp
src/driver/async_io/src/: async_can.cpp
src/driver/async_io/tests/: test_acan.cpp
src/driver/async_serial/: CMakeLists.txt
src/driver/async_serial/include/async_serial/: aserial_utils.hpp  async_serial.hpp  device_error.hpp  msg_buffer.hpp
src/driver/async_serial/src/: async_serial.cpp
src/driver/async_serial/tests/: CMakeLists.txt  test_aserial.cpp  test_aserial_if.cpp
src/driver/socketcan/: CMakeLists.txt
src/driver/socketcan/include/socketcan/: socketcan.h
src/driver/socketcan/src/: socketcan.c
src/driver/socketcan/tests/: CMakeLists.txt  test_asio_can.cpp
src/lcmtypes/: geometry_msgs.lcm  pose.lcm  scout.lcm  sensor_msgs.lcm
src/monitor/: CMakeLists.txt
src/monitor/include/monitor/: ncolors.hpp  nshapes.hpp  scout_monitor.hpp
src/monitor/src/: ncolors.cpp  nshapes.cpp  scout_monitor.cpp
src/monitor/tests/: CMakeLists.txt  test_ncurses.cpp  test_scout_monitor.cpp
src/scout/: CMakeLists.txt
src/scout/include/scout/: scout_base.hpp  scout_can.hpp  scout_can_protocol.h  scout_can_protocol.hpp  scout_command.hpp  scout_motion_cmd.hpp  scout_serial_protocol.hpp  scout_state.hpp
src/scout/scout_io_v2/: CMakeLists.txt
src/scout/scout_io_v2/include/scout_io/: scout_io.h  scout_serial.h
src/scout/src/: scout_base.cpp  scout_can_protocol.cpp  scout_serial.cpp
src/scout/tests/: CMakeLists.txt  test_can_msg.cpp  test_can_protocol.cpp  test_scout_base.cpp
src/scout/tests/gtests/: scout_can_protocol_test.cpp
src/scout_base/include/scout_base/: scout_base.hpp  scout_types.hpp
src/scout_base/src/: scout_base.cpp
src/scout_cpp/: CMakeLists.txt
src/scout_cpp/include/scout/: scout_robot.h
src/scout_cpp/src/: scout_robot.cpp
src/scout_io/: CMakeLists.txt
src/scout_io/include/scout_io/: serialport.h  transport.h
src/scout_io/src/: transport.cpp
src/scout_io/tests/: CMakeLists.txt
src/scout_monitor/app/: app_scout_monitor.cpp
src/scout_monitor/include/monitor/: scout_monitor.hpp
src/scout_monitor/src/: scout_monitor.cpp
src/scout_sdk/scout_base/include/scout_base/: scout_base.hpp
src/scout_sdk/scout_base/src/: scout_base.cpp
src/sdk_core/: CMakeLists.txt
src/sdk_core/agilex_base/: CMakeLists.txt
src/sdk_core/agilex_base/include/agilex_protocol/: agilex_mobile_base.hpp  hunter_protocol.h  mobile_base_protocol.h  scout_protocol.h
src/sdk_core/agilex_base/src/: agilex_mobile_base.cpp
src/sdk_core/agilex_protocol/: CMakeLists.txt
src/sdk_core/agilex_protocol/include/agilex_protocol/: hunter_protocol.h  scout_protocol.h
src/sdk_core/agilex_protocol/include/agilex_protocol/parser/: hunter_can_parser.hpp  hunter_serial_parser.hpp  scout_can_parser.hpp  scout_serial_parser.hpp
src/sdk_core/agilex_protocol/src/: hunter_can_parser.cpp  hunter_serial_parser.cpp  scout_can_parser.cpp  scout_serial_parser.cpp
src/sdk_core/common/: CMakeLists.txt
src/sdk_core/common/agilex_protocol/: CMakeLists.txt
src/sdk_core/common/agilex_protocol/scout_protocol/: CMakeLists.txt
src/sdk_core/common/agilex_protocol/scout_protocol/include/scout_protocol/: scout_protocol.h
src/sdk_core/hunter_base/: CMakeLists.txt
src/sdk_core/hunter_base/include/hunter_base/: hunter_base.hpp  hunter_command.hpp  hunter_protocol.h  hunter_state.hpp
src/sdk_core/hunter_base/include/hunter_base/details/: hunter_can_parser.hpp  hunter_serial_parser.hpp
src/sdk_core/hunter_base/src/: hunter_base.cpp  hunter_can_parser.cpp  hunter_serial_parser.cpp
src/sdk_core/scout_base/: CMakeLists.txt
src/sdk_core/scout_base/include/scout_base/: scout_base.hpp  scout_command.hpp  scout_protocol.h
src/sdk_core/scout_base/include/scout_base/details/: scout_can_parser.hpp  scout_serial_parser.hpp
src/sdk_core/scout_base/src/: scout_base.cpp  scout_can_parser.cpp  scout_serial_parser.cpp
src/sdk_core/scout_base/tests/: CMakeLists.txt
src/sdk_core/unit_tests/gtests/: scout_can_protocol_test.cpp
src/unit_tests/: CMakeLists.txt
